Unifi/Manifests/unifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: unifi
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      serviceAccountName: unifi-sa
      containers:
      - name: unifi
        image: "lscr.io/linuxserver/unifi-controller:latest"
        ports:
        - containerPort: 6789
          name: ubnt-6789
          protocol: TCP
        - containerPort: 8080
          name: ubnt-8080
          protocol: TCP
        - containerPort: 8443
          name: ubnt-8443
          protocol: TCP
        - containerPort: 3478
          name: ubnt-3478
          protocol: UDP
        - containerPort: 8881
          name: ubnt-8881
          protocol: TCP
        - containerPort: 8882
          name: ubnt-8882
          protocol: TCP
        - containerPort: 10001
          name: ubnt-10001
          protocol: UDP
        volumeMounts:
        - name: unifi-pvc
          mountPath: /config
      volumes:
      - name: unifi-pvc
        persistentVolumeClaim:
             claimName: unifi-pvc
      nodeSelector:
        kubernetes.io/arch: amd64
