Unifi/Manifests/unifi-services-udp.yaml

apiVersion: v1
kind: Service
metadata:
    name: unifi-controller-udp
    annotations:
        metallb.universe.tf/allow-shared-ip: "true"
    namespace: unifi
    labels:
        app: unifi-controller
spec:
    type: NodePort
    externalTrafficPolicy: Local
    selector:
        app: unifi-controller
    ports:
    - name: "l2-discoverable"
      protocol: UDP
      targetPort: 1900 
      port: 1900
    - name: "stun"
      protocol: UDP
      targetPort: 3478
      port: 3478
    - name: "ap-discovery"
      protocol: UDP
      targetPort: 10001
      port: 10001
