Unifi/Manifests/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-unifi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: haproxy
  rules:
  - host: "test.k8s.bne-home.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port:
              number: 8443
  tls:
  - hosts:
    - test.k8s.bne-home.net
    secretName: test-unifi-tls
