Unifi/Manifests/unifi-ingress-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
    haproxy-ingress.github.io/ssl-passthrough: "true"
spec:
  ingressClassName: openshift-default
  rules:
    - host: "unifi.okd.bne-shift.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
  tls:
    - hosts:
        - unifi.okd.bne-shift.net
      secretName: unifi-tls-le
